<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ba.boxappandroid.MenuActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"></LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="10dip">

        <Button
            android:id="@+id/btnRegistrarseComoSolicitante"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToRegistrarseComoSolicitante"
            android:text="@string/registrarse_como_solicitante" />

        <Button
            android:id="@+id/btnRegistrarProducto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToRegistrarProducto"
            android:text="@string/registrar_un_producto" />

        <!-- MSTRJL -->
        <Button
            android:id="@+id/btnProductos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToVerProductos"
            android:text="@string/ver_los_productos" />

        <Button
            android:id="@+id/btnProductosPendientes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToVerProductosPendientes"
            android:text="@string/ver_los_productos_pendientes" />

        <Button
            android:id="@+id/btnProductosEntregados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToVerProductosEntregados"
            android:text="@string/ver_los_productos_entregados" />

        <Button
            android:id="@+id/btnViaje"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="goToIngresarViaje"
            android:text="@string/ingresar_viaje" />
        <!-- MSTRJL -->

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimary"
            android:onClick="logout"
            android:text="@string/logout" />
    </LinearLayout>
</RelativeLayout>
